--- a/Code.ipynb
+++ b/Code.ipynb
@@ -1487,6 +1487,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KL Divergence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Initializing Divergence code\n",
+    "def kl_divergence(X, Y):\n",
+    "    P = X.copy()\n",
+    "    Q = Y.copy()\n",
+    "    P.columns = ['P']\n",
+    "    Q.columns = ['Q']\n",
+    "    df = Q.join(P).fillna(0)\n",
+    "    p = df.iloc[:,1]\n",
+    "    q = df.iloc[:,0]\n",
+    "    D_kl = scipy.stats.entropy(p, q)\n",
+    "    return D_kl\n",
+    "\n",
+    "def chi2_divergence(X,Y):\n",
+    "    P = X.copy()\n",
+    "    Q = Y.copy()\n",
+    "    P.columns = ['P']\n",
+    "    Q.columns = ['Q']\n",
+    "    df = Q.join(P).fillna(0)\n",
+    "    p = df.iloc[:,1]\n",
+    "    q = df.iloc[:,0]\n",
+    "    return scipy.stats.chisquare(p, q).statistic\n",
+    "\n",
+    "def Divergence(corpus1, corpus2, difference=\"KL\"):\n",
+    "    \"\"\"Difference parameter can equal KL, Chi2, or Wass\"\"\"\n",
+    "    freqP = nltk.FreqDist(corpus1)\n",
+    "    P = pd.DataFrame(list(freqP.values()), columns = ['frequency'], index = list(freqP.keys()))\n",
+    "    freqQ = nltk.FreqDist(corpus2)\n",
+    "    Q = pd.DataFrame(list(freqQ.values()), columns = ['frequency'], index = list(freqQ.keys()))\n",
+    "    if difference == \"KL\":\n",
+    "        return kl_divergence(P, Q)\n",
+    "    elif difference == \"Chi2\":\n",
+    "        return chi2_divergence(P, Q)\n",
+    "    elif difference == \"KS\":\n",
+    "        try:\n",
+    "            return scipy.stats.ks_2samp(P['frequency'], Q['frequency']).statistic\n",
+    "        except:\n",
+    "            return scipy.stats.ks_2samp(P['frequency'], Q['frequency'])\n",
+    "    elif difference == \"Wasserstein\":\n",
+    "        try:\n",
+    "            return scipy.stats.wasserstein_distance(P['frequency'], Q['frequency'], u_weights=None, v_weights=None).statistic\n",
+    "        except:\n",
+    "            return scipy.stats.wasserstein_distance(P['frequency'], Q['frequency'], u_weights=None, v_weights=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating corpora for KL Divergence\n",
+    "corpora = []\n",
+    "for index, row in test.iterrows():\n",
+    "    if len(corpora) > 10:\n",
+    "        break\n",
+    "    corpora.append(row['normalized_KL'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def sorted_df(df, category):\n",
+    "    cats = sorted(set(df[category]))\n",
+    "    new_df = pd.DataFrame(index = cats, columns = ['normalized'])\n",
+    "    for cat in tqdm(cats):\n",
+    "        #This can take a while\n",
+    "        print(\"Embedding {}\".format(cat), end = '\\r')\n",
+    "        subsetDF = df[df[category] == cat]\n",
+    "        vocabulary = subsetDF['normalized_KL'].sum()\n",
+    "        print(new_df)\n",
+    "        new_df.loc[cat]['normalized'] = vocabulary\n",
+    "    \n",
+    "    return new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = []\n",
+    "for p in tqdm(corpora):\n",
+    "    l = []\n",
+    "    for q in corpora:\n",
+    "        l.append(Divergence(p,q, difference = 'KL'))\n",
+    "    L.append(l)\n",
+    "M = np.array(L)\n",
+    "fig = plt.figure()\n",
+    "div = pd.DataFrame(M, columns = fileids, index = fileids)\n",
+    "ax = sns.heatmap(div, annot=True)\n",
+    "ax.set_xlabel(\"Starting year\")\n",
+    "ax.set_ylabel(\"Final year\")\n",
+    "bottom, top = ax.get_ylim()\n",
+    "ax.set_ylim(bottom + 0.5, top - 0.5)\n",
+    "ax.set_title(\"Yearly KL-Divergence\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Word Embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1612,6 +1735,78 @@
     "            normalized.append(str(w.lemma_))\n",
     "\n",
     "    return normalized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Projections \n",
+    "morality_words = pd.read_csv('/home/valalvern/models/morality_pairs.csv')\n",
+    "word = 'migrantworker'\n",
+    "moral_words = [x for x in morality_words['moral_eng'] if pd.isnull(x) == False]\n",
+    "immoral_words = [x for x in morality_words['immoral_eng'] if pd.isnull(x) == False]\n",
+    "\n",
+    "safe = ['secure', 'safe', 'sound', 'harmless', 'innocuous', 'benign', 'wholesome', 'mild', 'guard', 'shield', 'shielded', 'guarded', 'secured']\n",
+    "unsafe = ['insecure', 'unsafe', 'unsound', 'threat', 'harmful', 'hostile', 'vulnerable', 'reckless', 'dangerous', 'threatening', 'risky', 'prevarious', 'unpredictable']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def project_year(embeddingsDict, migrant):\n",
+    "    '''\n",
+    "    construct affluence, morality, and status dimensions, and\n",
+    "    project 'democracy' on these dimensions for each years\n",
+    "    '''\n",
+    "    m = []\n",
+    "    s = []\n",
+    "    cats = sorted(set(embeddingsDict.keys()))\n",
+    "    for catOuter in cats:\n",
+    "        print(catOuter)\n",
+    "        #embeddings_aligned[catOuter] = [embeddings_raw[catOuter]]\n",
+    "        #for embed in embeddingsDict[catOuter][1:]:\n",
+    "        embed = embeddingsDict[catOuter][0]\n",
+    "        security = dimension(embed, safe, unsafe)\n",
+    "        morality = dimension(embed, moral_words, immoral_words)\n",
+    "        try:\n",
+    "            m.append(cosine_similarity(embed.wv[migrant].reshape(1, -1), morality.reshape(1,-1))[0][0])\n",
+    "            s.append(cosine_similarity(embed.wv[migrant].reshape(1, -1), security.reshape(1, -1))[0][0])\n",
+    "        except:\n",
+    "            print(catOuter)\n",
+    "    projection_df = pd.DataFrame({'morality' : m, 'security': s}, index = [i for i in cats]\n",
+    "                                  )\n",
+    "    return projection_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_projection(projection, title):\n",
+    "    #plt.plot(projection_df_safety, label='safety')\n",
+    "    plt.plot(projection['morality'], label = 'morality')\n",
+    "    plt.plot(projection['security'], label = 'security')\n",
+    "    plt.title('{} Projection'.format(title))\n",
+    "    plt.xlabel('Year')\n",
+    "    plt.ylabel('Projection')\n",
+    "    plt.legend(loc=3);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_projection(projection_df_li, 'littleindia')"
    ]
   },
   {
